<resources>
    <string name="app_name">tyme.co</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_time">15:33</string>
    <string name="title_activity_details">Details</string>
    <string name="date">Date</string>
    <string name="project_name">Project Name</string>
    <string name="track">TRACK</string>
    <string name="cancel">CANCEL</string>
    <string name="fill_in">Fill in your details</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="client">Client</string>
    <string name="task">Task</string>
    <string name="project">Project</string>
    <string name="pl">00.00</string>
    <string name="_00_00">00:00</string>
    <string name="sign_in">Sign in</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="welcome_to">Welcome to</string>
    <string name="example">example</string>
    <string name="tyme_co">.tyme.co</string>
    <string name="total">Total:</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="resume">Resume</string>
    <string name="task_added_successfully">Task added successfully.</string>
</resources>
