<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.san.tyme.activity.Details"
    tools:showIn="@layout/activity_details">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="3dp"
        android:layout_marginTop="20dp"
        app:cardUseCompatPadding="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/project"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView16"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="20sp"
                    android:background="@drawable/brd_txt"
                    android:gravity="center"
                    android:textStyle="normal|bold" />
            </LinearLayout>

            <TextView
                android:text="@string/task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/textView14"
                android:textSize="18sp"
                android:layout_weight="1" />

            <TextView
                android:text="@string/client"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textView15" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:text="@string/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView17"
                    android:textSize="18sp"
                    android:gravity="center|left"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:id="@+id/textView11" />

            <TextView
                android:text="@string/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView21"
                android:visibility="visible"
                android:textSize="18sp"
                android:gravity="center|left"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:text="@string/task_added_successfully"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:id="@+id/textView20"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp" />

</RelativeLayout>
