<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:layout_centerVertical="true"
    android:id="@+id/custom_toast_layout">

      <!--  <TextView
            android:text="@string/fill_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:id="@+id/textView8"
            android:textStyle="bold"
            android:layout_weight="0.4" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view"
        android:background="#000000"
        android:layout_weight="1" />-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="6dp"
            android:textSize="18sp"
            android:text="@string/date"
            android:textColor="#000000"
            android:id="@+id/editText6"
            android:maxLines="1"
            android:layout_weight="0.6" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_today_black_24dp"
            android:id="@+id/imageView4"
            android:background="@android:color/transparent"
            android:layout_weight="0.3" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#90000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_name"
        android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
        android:ems="10"
        android:gravity="left"
        android:paddingLeft="4dp"
        android:paddingRight="11dp"
        android:textColor="#000000"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/editText3"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#90000000" />

    <TextView
        android:text="Client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="4dp"
        android:id="@+id/textView5" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#90000000" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="-2dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:spinnerMode="dialog"
        android:id="@+id/spinner" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#90000000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:minLines="1"
        android:paddingLeft="3dp"
        android:hint="@string/description"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:id="@+id/editText5" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#90000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18sp"
        android:paddingLeft="4dp"
        android:textColor="#000000"
        android:hint="@string/_00_00"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/editText7" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" />

        <Button
            android:text="@string/cancel"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" />
    </LinearLayout>

</LinearLayout>