<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingBottom="5dp">

                <TextView
                    android:text="Project Name:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView29"
                     android:textStyle="bold" />

                <TextView
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:paddingLeft="4dp"
                    android:layout_weight="1" />


            </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="4dp"
            android:weightSum="2">

            <TextView
                android:text="Client Name:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView30"
                android:textStyle="bold"
                />

            <TextView
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView22"
                android:paddingLeft="4dp"
                android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:paddingLeft="4dp"
                android:weightSum="2">

                <TextView
                    android:text="Task type:"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView31"
                    />

                <TextView
                    android:text=""
                    android:paddingLeft="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:layout_weight="1" />

            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingLeft="4dp"
            android:weightSum="2">

            <TextView
                android:text="Time:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView33"
                 android:textStyle="bold"/>

            <TextView
                android:text="00:00"
                android:layout_width="0dp"
                android:paddingLeft="4dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:layout_weight="1" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:paddingLeft="4dp"
                android:weightSum="2">

                <TextView
                    android:text="Description:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView32"
                    android:textStyle="bold" />

                <TextView
                        android:text=""
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:id="@+id/textView10" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                android:gravity="center_vertical">

                <Button
                    android:drawableLeft="@drawable/ic_mode_edit_black_24dp"
                    android:text="@string/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/delete"
                    android:drawableLeft="@drawable/ic_delete_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img5"
                    android:text="@string/resume"
                    android:drawableLeft="@drawable/ic_play_circle_outline_black_24dp"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>